# flowlist

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: c11cb676e0ab_init.py
backend/src/app/: main.py
backend/src/app/api/: api_v1.py
backend/src/app/api/v1/: auth.py  tasks.py
backend/src/app/core/: config.py  deps.py  security.py
backend/src/app/db/: base.py  session.py
backend/src/app/models/: task.py  user.py
backend/src/app/repositories/: task.py  user.py
backend/src/app/schemas/: task.py  user.py
backend/src/app/services/: background_tasks.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/layout/: Container.tsx  Header.tsx
frontend/src/components/shared/: TaskCard.tsx
frontend/src/components/ui/: TaskEditor.tsx
frontend/src/contexts/: AuthContext.tsx  MainProvider.tsx  TaskContext.tsx
frontend/src/lib/: api.ts  types.ts
